# foss-launcher

./: .claude_code_rules  .gitignore  ASSUMPTIONS.md  CHANGELOG.md  CHATGPT_CODE_IMPLEMENTATION_PROMPT.md  CLAUDE_CODE_IMPLEMENTATION_PROMPT.md  CLAUDE_CODE_STRICT_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  GLOSSARY.md  LICENSE  Makefile  OPEN_QUESTIONS.md  README.md  SECURITY.md  STRICT_COMPLIANCE_GUARANTEES.md  TASK_BACKLOG.md  TRACEABILITY_MATRIX.md  WS-12_EVIDENCE.md  link_check_full_output.txt  link_check_output.txt  open_issues.md  pyproject.toml  run_tc_522_tests.py  telemetry.db  temp_analyze_broken_links.py  temp_broken_links_categorized.json  temp_link_check_results.json  temp_link_checker.py  temp_links_output.txt  temp_md_files.txt  test_prepush_hook.sh  validate_tc_522.py
.claude/: settings.json  settings.local.json
.kilocode/: docs_sync.yaml
artifacts/: pilot2_e2e_report.json  pilot2_note_e2e_report.json  pilot_e2e_cli_report.json  pilot_e2e_pilot-aspose-3d-foss-python_run1.json  pilot_e2e_pilot-aspose-3d-foss-python_run2.json  pilot_e2e_pilot-aspose-note-foss-python_run1.json  pilot_e2e_pilot-aspose-note-foss-python_run2.json  tc520_pilot_run_report.json
config/: lychee_allowlist.txt  markdownlint-cli2.yaml  network_allowlist.yaml  toolchain.lock.yaml
configs/: README.md
docs/: AI_GOVERNANCE_QUICK_REFERENCE.md  README.md  architecture.md  cli_usage.md  creating_taskcards.md  telemetry_integration_completion.md
hooks/: README.md  install.sh  pre-commit  pre-push  prepare-commit-msg
plans/: 00_README.md  00_orchestrator_master_prompt.md  README.md  acceptance_test_matrix.md  implementation_master_checklist.md  swarm_coordination_playbook.md  traceability_matrix.md
reports/: CHANGELOG.md  COMPLETION_REPORT_20260204_VFV_READINESS.md  GAP_ANALYSIS_20260208.md  ORCHESTRATOR_FINAL_SUMMARY.txt  ORCHESTRATOR_ROUTING_PROCEDURE.md  ORCHESTRATOR_STATUS.md  (+32 more)
(+2256 files in other folders)
